add shadow + fix responsive (scroll-x)

--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,21 @@
 @tailwind components;
 @tailwind utilities;
 
+  html, body {
+    scroll-behavior: smooth;
+  }
+
+  /* Tailwind CSS utility classes */
+  * {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+  }
+
+  body, #app {
+    overflow-x: hidden;
+  }
+
   @keyframes bounce-up {
       0%, 100% {
         transform: translateY(100);
