--- a/src/index.css
+++ b/src/index.css
@@ -53,11 +53,11 @@
 
     html {
       scroll-behavior: smooth;
-      background-color: #f8fafc; 
+      background-color: #ffff; 
     } 
 
     :root {
-      --bg-light: #8EE4AF;
+      --bg-light: #ffff;
     }
     
     body.light-mode {
@@ -66,7 +66,7 @@
     
     /* Dark Mode */
     :root {
-      --bg-dark: #05161A;
+      --bg-dark: #000000;
     }
     
     body.dark-mode {
@@ -86,7 +86,7 @@
     .swiper-slide {
       text-align: center;
       font-size: 18px;
-      background: #fff;
+      background: #ffff;
     
       /* Center slide text vertically */
       display: flex;
